deployment/kube-manifests/environments/qa/replication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linux-web
spec:
  replicas: 3
