deployment/kube-manifests/environments/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linux-web
spec:
  rules:
    - host: qa.linux-web.com
      http:
        paths:
          - backend:
              service:
                name: linux-web
                port:
                  number: 80
            path: /
            pathType: Exact
